--- a/pratos.html
+++ b/pratos.html
@@ -19,7 +19,7 @@
 			rel="stylesheet"/>
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
 
-
+<center>
 		<header>
 			<h1>Haru<span>Sushi</span></h1>
 
@@ -567,7 +567,8 @@
                 POWERED BY <a href="https://www.instagram.com/maiketidre" target="_blank">MAIKE TIDRE</a>
             </footer>
         </div>
-
+    
+   </center>
 	</body>
 </html>
 
