--- a/pratos.html
+++ b/pratos.html
@@ -34,6 +34,8 @@
 			<section id="grid">			<!--INICIO DE COMBINADOS-->
 
 				<h2>Combinados</h2>
+				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-sushi-food-levitation-icongeek26-linear-colour-icongeek26.png"/></center>
+				
 				<ul>
 					<li>
 						<div class="Details">
@@ -108,6 +110,7 @@
 
 			<section id="grid">
 				<h2>Temaki</h2>
+				<center><img src="https://img.icons8.com/external-smashingstocks-flat-smashing-stocks/66/000000/external-Temaki-food-smashingstocks-flat-smashing-stocks.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -188,6 +191,7 @@
 
 			<section id="grid">
 				<h2>Hot Holls</h2>
+				<center><img src="https://img.icons8.com/external-tulpahn-outline-color-tulpahn/64/000000/external-sushi-roll-japanese-food-tulpahn-outline-color-tulpahn.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -256,6 +260,7 @@
 
 			<section id="grid">          <!-- DICAS -->   
 				<h2>Dicas</h2>
+				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Sushi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -311,6 +316,7 @@
 
 			<section id="grid">			<!-- INICIO HOSSOMAKI -->
 				<h2>Hossomaki</h2>
+				<center><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/64/000000/external-sushi-street-food-flaticons-flat-flat-icons.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -356,6 +362,7 @@
 
 			<section id="grid">
 				<h2>uramaki</h2>
+				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Uramaki-Sushi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -411,6 +418,7 @@
 
 			<section id="grid">
 				<h2>Futomaki</h2>
+				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Futomaki-Wegi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -455,6 +463,7 @@
 
 			<section id="grid">
 				<h2>Niguiri</h2>
+				<center><img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-sushi-japan-justicon-lineal-color-justicon.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -489,6 +498,7 @@
 
 			<section id="grid">
 				<h2>Joy</h2>
+				<center><img src="https://img.icons8.com/external-linector-lineal-color-linector/64/000000/external-sushi-japan-linector-lineal-color-linector.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -524,6 +534,7 @@
 
 			<section id="grid">
 				<h2>Barca</h2>
+				<center><img src="https://img.icons8.com/external-tulpahn-outline-color-tulpahn/64/000000/external-sushi-japan-tulpahn-outline-color-tulpahn.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -546,6 +557,7 @@
 
 			<section id="grid">
 				<h2>Gunkan</h2>
+				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Lunchbox-lunchbox-icongeek26-linear-colour-icongeek26-15.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
