--- a/pratos.html
+++ b/pratos.html
@@ -3,15 +3,6 @@
 	<head>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>HaruSushi</title>
-
-		<link rel="stylesheet" href="./pratos.css" />
-		<link rel="icon" type="image/x-icon" href="./icone.jpg">
-	</head>
-	<body>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -19,6 +10,16 @@
 			rel="stylesheet"/>
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
 
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>HaruSushi</title>
+
+		<link rel="stylesheet" href="./pratos.css" />
+		<link rel="icon" type="image/x-icon" href="./icone.jpg">
+
+
+	</head>
+	<body>
 
 		<header>
 			<h1>Haru<span>Sushi</span></h1>
@@ -573,8 +574,11 @@
 					</li>
 				</ul>
 			</section>
+			<div class="whatsapp">
+				<a href="https://api.whatsapp.com/send?phone=5542999220748&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20fazer%20um%20pedido." target="_blank"><img src="https://img.icons8.com/office/40/000000/whatsapp--v1.png"/></a>
+			</div>
 
-			<div>
+		<div>
             <footer>
                 POWERED BY <a href="https://www.instagram.com/maiketidre" target="_blank">MAIKE TIDRE</a>
             </footer>
