--- a/pratos.html
+++ b/pratos.html
@@ -13,13 +13,21 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>HaruSushi</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css
 
+
+
+		">
 		<link rel="stylesheet" href="./pratos.css" />
 		<link rel="icon" type="image/x-icon" href="./icone.jpg">
 
 
 	</head>
 	<body>
+
+		<a class="whatsapp" href="https://api.whatsapp.com/send?phone=5542999220748&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20fazer%20um%20pedido." target="_blank">
+			<i class="fa fa-whatsapp"></i>
+			</a>
 
 		<header>
 			<h1>Haru<span>Sushi</span></h1>
@@ -574,9 +582,6 @@
 					</li>
 				</ul>
 			</section>
-			<div class="whatsapp">
-				<a href="https://api.whatsapp.com/send?phone=5542999220748&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20fazer%20um%20pedido." target="_blank"><img src="https://img.icons8.com/office/40/000000/whatsapp--v1.png"/></a>
-			</div>
 
 		<div>
             <footer>
