--- a/pratos.html
+++ b/pratos.html
@@ -43,7 +43,7 @@
 			<section id="grid">			<!--INICIO DE COMBINADOS-->
 
 				<h2>Combinados</h2>
-				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-sushi-food-levitation-icongeek26-linear-colour-icongeek26.png"/></center>
+				<center><img src="./pratos/combo.png"/></center>
 				
 				<ul>
 					<li>
@@ -119,7 +119,7 @@
 
 			<section id="grid">
 				<h2>Temaki</h2>
-				<center><img src="https://img.icons8.com/external-smashingstocks-flat-smashing-stocks/66/000000/external-Temaki-food-smashingstocks-flat-smashing-stocks.png"/></center>
+				<center><img src="./pratos/temaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -200,7 +200,7 @@
 
 			<section id="grid">
 				<h2>Hot Holls</h2>
-				<center><img src="https://img.icons8.com/external-tulpahn-outline-color-tulpahn/64/000000/external-sushi-roll-japanese-food-tulpahn-outline-color-tulpahn.png"/></center>
+				<center><img src="./pratos/hot-holl.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -269,7 +269,7 @@
 
 			<section id="grid">          <!-- DICAS -->   
 				<h2>Dicas</h2>
-				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Sushi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
+				<center><img src="./pratos/dicas.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -325,7 +325,7 @@
 
 			<section id="grid">			<!-- INICIO HOSSOMAKI -->
 				<h2>Hossomaki</h2>
-				<center><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/64/000000/external-sushi-street-food-flaticons-flat-flat-icons.png"/></center>
+				<center><img src="./pratos/hossomaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -366,12 +366,34 @@
 				</ul>
 			</section>			<!-- FINAL HASSOMAKI -->
 
+			<!-- Gunkan -->
+
+			<section id="grid">
+				<h2>Gunkan</h2>
+				<center><img src="./pratos/gunkan.png"/></center>
+				<ul>
+					<li>
+						<div class="Details">
+							<h3>Gunkan</h3>
+							<img src="" alt="">
+							<p>
+								Alga (nori) envolto em arroz, cream cheese e
+								salmão batido, coberto com geléia de pimenta e
+								cebolinha.
+							</p>
+						</div>
+
+						<strong class="price"> R$20,00 </strong>
+					</li>
+				</ul>
+			</section>
+
 
 						<!-- Uramaki -->
 
 			<section id="grid">
 				<h2>uramaki</h2>
-				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Uramaki-Sushi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
+				<center><img src="./pratos/uramaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -427,7 +449,7 @@
 
 			<section id="grid">
 				<h2>Futomaki</h2>
-				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Futomaki-Wegi-sushi-icongeek26-linear-colour-icongeek26.png"/></center>
+				<center><img src="./pratos/futomaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -472,7 +494,7 @@
 
 			<section id="grid">
 				<h2>Niguiri</h2>
-				<center><img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-sushi-japan-justicon-lineal-color-justicon.png"/></center>
+				<center><img src="./pratos/niguiri.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -507,7 +529,7 @@
 
 			<section id="grid">
 				<h2>Joy</h2>
-				<center><img src="https://img.icons8.com/external-linector-lineal-color-linector/64/000000/external-sushi-japan-linector-lineal-color-linector.png"/></center>
+				<center><img src="./pratos/joy.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -543,7 +565,7 @@
 
 			<section id="grid">
 				<h2>Barca</h2>
-				<center><img src="https://img.icons8.com/external-tulpahn-outline-color-tulpahn/64/000000/external-sushi-japan-tulpahn-outline-color-tulpahn.png"/></center>
+				<center><img src="./pratos/barca.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -558,27 +580,6 @@
 						</div>
 
 						<strong class="price"> R$132,00 </strong>
-					</li>
-				</ul>
-			</section>
-
-			<!-- Gunkan -->
-
-			<section id="grid">
-				<h2>Gunkan</h2>
-				<center><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-Lunchbox-lunchbox-icongeek26-linear-colour-icongeek26-15.png"/></center>
-				<ul>
-					<li>
-						<div class="Details">
-							<h3>Gunkan</h3>
-							<p>
-								Alga (nori) envolto em arroz, cream cheese e
-								salmão batido, coberto com geléia de pimenta e
-								cebolinha.
-							</p>
-						</div>
-
-						<strong class="price"> R$20,00 </strong>
 					</li>
 				</ul>
 			</section>
