--- a/pratos.html
+++ b/pratos.html
@@ -43,7 +43,7 @@
 			<section id="grid">			<!--INICIO DE COMBINADOS-->
 
 				<h2>Combinados</h2>
-				<center><img src="./pratos/combo.png"/></center>
+				<center><img src="./combo.png"/></center>
 				
 				<ul>
 					<li>
@@ -119,7 +119,7 @@
 
 			<section id="grid">
 				<h2>Temaki</h2>
-				<center><img src="./pratos/temaki.png"/></center>
+				<center><img src="./temaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -200,7 +200,7 @@
 
 			<section id="grid">
 				<h2>Hot Holls</h2>
-				<center><img src="./pratos/hot-holl.png"/></center>
+				<center><img src="./hot-holl.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -269,7 +269,7 @@
 
 			<section id="grid">          <!-- DICAS -->   
 				<h2>Dicas</h2>
-				<center><img src="./pratos/dicas.png"/></center>
+				<center><img src="./dicas.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -325,7 +325,7 @@
 
 			<section id="grid">			<!-- INICIO HOSSOMAKI -->
 				<h2>Hossomaki</h2>
-				<center><img src="./pratos/hossomaki.png"/></center>
+				<center><img src="./hossomaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -370,7 +370,7 @@
 
 			<section id="grid">
 				<h2>Gunkan</h2>
-				<center><img src="./pratos/gunkan.png"/></center>
+				<center><img src="./gunkan.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -393,7 +393,7 @@
 
 			<section id="grid">
 				<h2>uramaki</h2>
-				<center><img src="./pratos/uramaki.png"/></center>
+				<center><img src="./uramaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -449,7 +449,7 @@
 
 			<section id="grid">
 				<h2>Futomaki</h2>
-				<center><img src="./pratos/futomaki.png"/></center>
+				<center><img src="./futomaki.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -494,7 +494,7 @@
 
 			<section id="grid">
 				<h2>Niguiri</h2>
-				<center><img src="./pratos/niguiri.png"/></center>
+				<center><img src="./niguiri.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -529,7 +529,7 @@
 
 			<section id="grid">
 				<h2>Joy</h2>
-				<center><img src="./pratos/joy.png"/></center>
+				<center><img src="./joy.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
@@ -565,7 +565,7 @@
 
 			<section id="grid">
 				<h2>Barca</h2>
-				<center><img src="./pratos/barca.png"/></center>
+				<center><img src="./barca.png"/></center>
 				<ul>
 					<li>
 						<div class="Details">
