--- a/pratos.html
+++ b/pratos.html
@@ -9,6 +9,9 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"/>
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
+			<style>
+			@import url('http://fonts.cdnfonts.com/css/siamese-katsong');
+			</style>
 
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
