--- a/pratos.html
+++ b/pratos.html
@@ -6,21 +6,15 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
+			<!-- href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"/>
+		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet"> -->
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
-			<style>
-			@import url('http://fonts.cdnfonts.com/css/siamese-katsong');
-			</style>
 
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>HaruSushi</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css
-
-
-
-		">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="./pratos.css" />
 		<link rel="icon" type="image/x-icon" href="./icone.jpg">
 
