--- a/pratos.html
+++ b/pratos.html
@@ -9,7 +9,7 @@
 			<!-- href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"/>
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet"> -->
-		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
+		<link href="http://fonts.cdnfonts.com/css/siamese-katsong?styles=6089" rel="stylesheet">
 
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
