--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
-        <link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
+        
+        <link href="http://fonts.cdnfonts.com/css/siamese-katsong?styles=6089" rel="stylesheet">
+        
         <link rel="icon" type="image/x-icon" href="./icone.jpg">
     </head>
 
