--- a/pratos.html
+++ b/pratos.html
@@ -6,9 +6,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			<!-- href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"/>
-		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet"> -->
+		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
 		<link href="http://fonts.cdnfonts.com/css/siamese-katsong?styles=6089" rel="stylesheet">
 
 		<meta charset="UTF-8" />
