atualização de ingrediente dica 4

--- a/pratos.html
+++ b/pratos.html
@@ -309,8 +309,7 @@
 						<div class="Details">
 							<h3>DICA 4</h3>
 							<p>
-								8 Uramaki de morango fresco com chocolate
-								(nutella) e 4 Ichigos.
+								8 Uramaki de morango fresco com 4 Ichigos.
 							</p>
 						</div>
 
