Atualização de h3 dica 4

--- a/pratos.html
+++ b/pratos.html
@@ -307,7 +307,7 @@
 
 					<li>
 						<div class="Details">
-							<h3>DICA 4</h3>
+							<h3>DICA 4 (Doce)</h3>
 							<p>
 								8 Uramaki de morango fresco com 4 Ichigos.
 							</p>
