--- a/pratos.html
+++ b/pratos.html
@@ -53,7 +53,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$49,50 </strong>
+						<strong class="price"> R$53,50 </strong>
 					</li>
 
 					<li>
@@ -66,7 +66,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$49,50 </strong>
+						<strong class="price"> R$53,50 </strong>
 					</li>
 
 					<li>
@@ -79,7 +79,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$60,00 </strong>
+						<strong class="price"> R$65,00 </strong>
 					</li>
 
 					<li>
@@ -93,7 +93,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$91,00 </strong>
+						<strong class="price"> R$99,00 </strong>
 					</li>
 
 					<li>
@@ -106,7 +106,23 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$120,00 </strong>
+						<strong class="price"> R$127,00 </strong>
+					</li>
+
+					<li>
+						<div class="Details">
+							<h3>Barca especial</h3>
+							<p>
+								6 uramakis california, 6 Hot Holls de salmão, 6
+								Hot Holls de atum, 4 Niguiri de salmão, 2
+								Niguiri de skin, 4 Joy salmão, 100G de sashimi
+								de salmão, 6 futomake california e 2 Temaki
+								philadelphia.
+							</p>
+						</div>
+
+						<strong class="price"> R$140,00 </strong>
+						
 					</li>
 				</ul>
 			</section>
@@ -122,46 +138,50 @@
 					<li>
 						<div class="Details">
 							<h3>Philadelphia</h3>
+							<h5>1 unidade</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha, envoltos
+								Salmão fresco, cream cheese, envoltos
 								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$21,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Kani</h3>
+							<h5>1 unidade</h5>
 							<p>
 								Kani fresco envolto por arroz e uma alga
-								desidratada por fora.
+								desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>California</h3>
+							<h5>1 unidade</h5>
 							<p>
 								Kani, manga, pepino fresco, cream chesse,
 								envolto por arroz e uma alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Salmão skin</h3>
+							<h5>1 unidade</h5>
 							<p>
 								Pele de salmão frita e batida com cream cheese,
 								envolto por arroz e uma folha de alga
-								desidratada por fora.
+								desidratada.
 							</p>
 						</div>
 
@@ -171,25 +191,27 @@
 					<li>
 						<div class="Details">
 							<h3>Alaskan</h3>
+							<h5>1 unidade</h5>
 							<p>
 								Salmão, pepino, cream cheese, envolto por arroz
-								e uma folha desidratada por fora.
+								e uma folha desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$21,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Salmão grelhado</h3>
+							<h5>1 unidade</h5>
 							<p>
 								Salmão grelhado, cream cheese, envolto por arroz
-								e uma folha de alga desidratada por fora.
+								e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$22,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -203,65 +225,68 @@
 					<li>
 						<div class="Details">
 							<h3>Philadelphia</h3>
+							<h5>10 unidades (fritos)</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha, envolto
-								por arroz e uma folha de alga desidratada por
-								fora.
+								Salmão fresco, cream cheese, envolto
+								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$19,00 </strong>
+						<strong class="price"> R$23,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Philadelphia Extra</h3>
+							<h5>10 unidades (fritos)</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha, envolto
-								por arroz e uma folha de alga desidratada por
-								fora.
+								Salmão fresco, com uma camada de cream cheese, sobreposto por salmão grelhado e desfiado, envolto
+								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$24,00 </strong>
+						<strong class="price"> R$27,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Kani</h3>
+							<h5>10 unidades (fritos)</h5>
 							<p>
 								Kani fresco, envolto por arroz e uma folha de
-								alga desidratada por fora.
+								alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$19,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Skin</h3>
+							<h5>10 unidades (fritos)</h5>
 							<p>
-								Pele de salmão batida, cream cheese, cebolinha,
-								envolto por arroz e uma alga desidratada por
-								fora.
+								Pele de salmão batida, cream cheese,
+								envolto por arroz e uma alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$19,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Atum</h3>
+							<h5>10 unidades (fritos)</h5>
 							<p>
-								Atum, cream cheese, cebolinha, envolto por arroz
-								e uma folha de alga desidratada por fora.
+								Atum, cream cheese, envolto por arroz
+								e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$19,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
+					<h5>Obs: Todas as opções de Hot Holl são servidos com cream cheese e tarê. </h5>
 				</ul>
 			</section>
 
@@ -278,7 +303,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$31,00 </strong>
+						<strong class="price"> R$35,00 </strong>
 					</li>
 
 					<li>
@@ -290,7 +315,7 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$25,00 </strong>
+						<strong class="price"> R$28,00 </strong>
 					</li>
 
 					<li>
@@ -302,18 +327,19 @@
 							</p>
 						</div>
 
-						<strong class="price"> R$27,00 </strong>
+						<strong class="price"> R$30,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
-							<h3>DICA 4 (Doce)</h3>
+							<h3>DICA 4</h3>
 							<p>
-								8 Uramaki de morango fresco com 4 Ichigos.
+								8 Uramaki de morango fresco com chocolate
+							 e 4 Ichigos.
 							</p>
 						</div>
 
-						<strong class="price"> R$24,00 </strong>
+						<strong class="price"> R$26,00 </strong>
 					</li>
 				</ul>
 			</section>   			
@@ -327,38 +353,40 @@
 					<li>
 						<div class="Details">
 							<h3>Philadelphia</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha envolto
-								por arroz e uma folha de alga desidratada por
-								fora (nori).
+								Salmão fresco, cream cheese, envolto
+								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$16,00 </strong>
+						<strong class="price"> R$18,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Kani</h3>
+							<h5>8 unidades</h5>
 							<p>
 								Kani fresco envolto por arroz e uma folha de
-								alga desidratada por fora (nori).
+								alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$16,00 </strong>
+						<strong class="price"> R$17,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>pepino</h3>
+							<h5>8 unidades</h5>
 							<p>
 								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por fora (cani).
+								alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$13,00 </strong>
+						<strong class="price"> R$14,00 </strong>
 					</li>
 				</ul>
 			</section>			<!-- FINAL HASSOMAKI -->
@@ -372,15 +400,17 @@
 					<li>
 						<div class="Details">
 							<h3>Gunkan</h3>
+							<h5>4 unidades</h5>
 							<img src="" alt="">
 							<p>
 								Alga (nori) envolto em arroz, cream cheese e
-								salmão batido, coberto com geléia de pimenta e
-								cebolinha.
+								salmão batido e coberto com geléia de pimenta.
 							</p>
+							<br>
+							<h6>Valor por unidade: R$7,00.</h6>
 						</div>
 
-						<strong class="price"> R$20,00 </strong>
+						<strong class="price"> R$28,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -395,49 +425,64 @@
 					<li>
 						<div class="Details">
 							<h3>Philadelphia</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha envolto
-								por arroz e uma folha de alga desidratada por
-								fora (nori).
+								Salmão fresco e cream cheese envolto
+								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
+					</li>
+
+					<li>
+						<div class="Details">
+							<h3>Uramaki grelhado</h3>
+							<h5>8 unidades</h5>
+							<p>
+								Salmão fresco grelhado, creme cheese envolto
+								por arroz e uma folha de alga desidratada.
+							</p>
+						</div>
+
+						<strong class="price"> R$22,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Salmão skin</h3>
+							<h5>8 unidades</h5>
 							<p>
 								Pele de salmão batida envolto por arroz e uma
-								folha de alga desidratada por dentro (nori).
+								folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$16,00 </strong>
+						<strong class="price"> R$19,00 </strong>
 					</li>
 					<li>
 						<div class="Details">
 							<h3>Alaskan</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por fora (nori).
+								Pepino fresco e salmão envolto por uma alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>California</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Pepino fresco envolto por arroz e uma folha de
-								alga desidratada por dentro (nori).
+								Pepino, manga e kani fresco envolto por arroz e uma folha de
+								alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$19,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -451,22 +496,23 @@
 					<li>
 						<div class="Details">
 							<h3>philadelphia</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Salmão fresco, cream cheese, cebolinha envoltos
-								por arroz e uma folha de alga desidratada por
-								dentro (nori).
+								Salmão fresco e cream cheese, envoltos
+								por arroz e uma folha de alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Kani</h3>
+							<h5>8 unidades</h5>
 							<p>
-								Kani fresco envoltoi por arroz e uma folha de
-								alga desidratada por fora (nori).
+								Kani fresco envolto por arroz e uma folha de
+								alga desidratada.
 							</p>
 						</div>
 
@@ -475,14 +521,14 @@
 					<li>
 						<div class="Details">
 							<h3>California</h3>
+							<h5>8 unidades</h5>
 							<p>
 								Kani, manga, pepino fresco, cream cheese,
-								envoltos por arroz e uma alga desidratada por
-								fora (cani).
+								envoltos por arroz e uma alga desidratada.
 							</p>
 						</div>
 
-						<strong class="price"> R$18,00 </strong>
+						<strong class="price"> R$20,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -496,15 +542,17 @@
 					<li>
 						<div class="Details">
 							<h3>Salmão</h3>
+							<h5>4 unidades</h5>
 							<p>Bolinhos de arroz e salmão fresco.</p>
 						</div>
 
-						<strong class="price"> R$13,00 </strong>
+						<strong class="price"> R$15,00 </strong>
 					</li>
 
 					<li>
 						<div class="Details">
 							<h3>Skin</h3>
+							<h5>4 unidades</h5>
 							<p>Bolinhos de arroz e pele de salmão frita.</p>
 						</div>
 
@@ -514,10 +562,11 @@
 					<li>
 						<div class="Details">
 							<h3>Kani</h3>
+							<h5>4 unidades</h5>
 							<p>Bolinhos de arroz e kani fresco.</p>
 						</div>
 
-						<strong class="price"> R$10,00 </strong>
+						<strong class="price"> R$12,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -531,16 +580,8 @@
 					<li>
 						<div class="Details">
 							<h3>philadelphia</h3>
-							<p>Salão envolto com alga e cream cheese.</p>
-						</div>
-
-						<strong class="price"> R$30,00 </strong>
-					</li>
-
-					<li>
-						<div class="Details">
-							<h3>Salmão maçaricado</h3>
-							<p>Salmão envolto de salmão maçaricado.</p>
+							<h5>8 unidades</h5>
+							<p>Salmão envolto com alga e cream cheese.</p>
 						</div>
 
 						<strong class="price"> R$34,00 </strong>
@@ -548,11 +589,22 @@
 
 					<li>
 						<div class="Details">
+							<h3>Salmão maçaricado</h3>
+							<h5>8 unidades</h5>
+							<p>Salmão envolto de salmão maçaricado.</p>
+						</div>
+
+						<strong class="price"> R$38,00 </strong>
+					</li>
+
+					<li>
+						<div class="Details">
 							<h3>Salmão com kani</h3>
+							<h5>8 unidades</h5>
 							<p>Kani envolto de salmão.</p>
 						</div>
 
-						<strong class="price"> R$32,00 </strong>
+						<strong class="price"> R$34,00 </strong>
 					</li>
 				</ul>
 			</section>
@@ -561,22 +613,27 @@
 			<!-- Barca -->
 
 			<section id="grid">
-				<h2>Barca</h2>
-				<center><img  class="itens" src="./barca.png"/></center>
+				<h2>Adicionais</h2>
+				<center><h4>Cada combinado vai uma quantidade exata de Shoyo e Tarê, mas pode ser acrescentado maior quantidade.</h4></center>
+				<br>
+
+				</ul>
 				<ul>
 					<li>
 						<div class="Details">
-							<h3>Barca especial</h3>
+							<h3>Molho tarê</h3>
 							<p>
-								6 uramakis california, 6 Hot Holls de salmão, 6
-								Hot Holls de atum, 4 Niguiri de salmão, 2
-								Niguiri de skin, 4 Joy salmão, 100G de sashimi
-								de salmão, 6 futomake california e 2 Temaki
-								philadelphia.
+								R$0,50 - Unidade
 							</p>
 						</div>
-
-						<strong class="price"> R$132,00 </strong>
+					</li>
+					<li>
+						<div class="Details">
+							<h3>Molho Shoyo</h3>
+							<p>
+								R$0,50 - Unidade
+							</p>
+						</div>
 					</li>
 				</ul>
 			</section>
