--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <p class="subtittle">Sushi e Temaki</p>
 
-                <p class="subtittle">Delivey</p>
+                <p class="subtittle">Delivery</p>
         
         </header>
 
