--- a/pratos.html
+++ b/pratos.html
@@ -334,8 +334,7 @@
 						<div class="Details">
 							<h3>DICA 4</h3>
 							<p>
-								8 Uramaki de morango fresco com chocolate
-							 e 4 Ichigos.
+								8 Uramaki de morango fresco e 4 Ichigos.
 							</p>
 						</div>
 
