--- a/pratos.html
+++ b/pratos.html
@@ -8,7 +8,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,700&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"/>
-		<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">
+		<!--<link href="http://fonts.cdnfonts.com/css/siamese-katsong" rel="stylesheet">-->
 
 
 		<meta charset="UTF-8" />
@@ -18,7 +18,6 @@
 		
 		<link rel="stylesheet" href="./pratos.css" />
 		<link rel="icon" type="image/x-icon" href="./icone.jpg">
-
 
 	</head>
 	<body>
