--- a/pratos.html
+++ b/pratos.html
@@ -112,10 +112,9 @@
 						<div class="Details">
 							<h3>Barca especial</h3>
 							<p>
-								6 uramakis california, 6 Hot Holls de salmão, 6
-								Hot Holls de atum, 4 Niguiri de salmão, 2
+								8 uramakis california, 12 Hot Holls de salmão, 4 Niguiri de salmão, 2
 								Niguiri de skin, 4 Joy salmão, 100G de sashimi
-								de salmão, 6 futomake california e 2 Temaki
+								de salmão, 8 futomake california e 2 Temaki
 								philadelphia.
 							</p>
 						</div>
