--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="Redes">
                 <ul>
                     <li>
-                        <button class="btn btn-red"><a href="pratos.html">Cardapio</a></button>
+                        <button class="btn btn-red"><a href="pratos.html">Cardápio</a></button>
                     </li> 
                     
                     <li>
