Atualização de preços e adições de peças.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             
 
-                <p class="subtittle">Sushi teste e rtTemaki</p>
+                <p class="subtittle">Sushi e Temaki</p>
 
                 <p class="subtittle">Delivery</p>
         
